--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,16 +4,16 @@ stages:
   - build
   - prepare
   - deploy_spare
-  - deply_main
+  - depoly_main
   - cleanup
-Update Docker Images:
+Update Spare Docker Images:
   stage: prepare
   tags:
     - spare
   script:
     - docker pull nginx
     - docker pull $CI_REGISTRY_IMAGE
-Update Docker Images:
+Update Main Docker Images:
   stage: prepare
   tags:
     - main
@@ -30,7 +30,7 @@ Build Container:
     - docker build -t $CI_REGISTRY_IMAGE -f ${CI_PROJECT_DIR}/ttrss ${CI_PROJECT_DIR}
     - docker push $CI_REGISTRY_IMAGE
     - docker rmi $(docker images -f "dangling=true" -q)
-Deploy Containers:
+Deploy Spare Containers:
   stage: deploy_spare
   tags:
     - spare
@@ -40,7 +40,7 @@ Deploy Containers:
     - docker stop nginx
     - docker rm -v nginx
     - /opt/muteweb/run_containers.sh
-Deploy Containers:
+Deploy Main Containers:
   stage: deploy_main
   tags:
     - main
@@ -50,8 +50,18 @@ Deploy Containers:
     - docker stop nginx
     - docker rm -v nginx
     - /opt/muteweb/run_containers.sh
-Remove Untagged:
+Remove Main Untagged:
   allow_failure: true
   stage: cleanup
+  tags:
+    - main
   script:
     - docker rmi $(docker images -f "dangling=true" -q)
+Remove Spare Untagged:
+  allow_failure: true
+  stage: cleanup
+  tags:
+    - spare
+  script:
+    - docker rmi $(docker images -f "dangling=true" -q)
+
