--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,8 @@ Build Container:
     - docker build -t $CI_REGISTRY_IMAGE -f /tmp/ttrss/ttrss /tmp/ttrss
     - docker push $CI_REGISTRY_IMAGE
     - rm -rf /tmp/ttrss
-    - docker rmi $(docker images -f "dangling=true" -q)
+    - docker rmi $CI_REGISTRY_IMAGE
+    - docker rmi php:fpm
 Deploy Containers:
   stage: deploy_main
   script:
