--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,43 +2,29 @@ before_script:
   - env
 stages:
   - build
-  - cleanup_build
-  - cleanup
   - deploy
-Build Container:
+build:
   stage: build
   tags:
-    - build
+    - k8s
+  image:
+    name: gcr.io/kaniko-project/executor:debug
+    entrypoint: [""]
   script:
-    - mkdir -p /tmp/ttrss
-    - git clone --depth 1 https://tt-rss.org/gitlab/fox/tt-rss.git /tmp/ttrss/html
-    - cp -r ${CI_PROJECT_DIR}/ttrss* /tmp/ttrss/
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY_IMAGE
-    - docker build -t $CI_REGISTRY_IMAGE -f /tmp/ttrss/ttrss /tmp/ttrss
-    - docker push $CI_REGISTRY_IMAGE
-    - rm -rf /tmp/ttrss
-    - docker rmi $CI_REGISTRY_IMAGE
-cleanup_build_job:
-  stage: cleanup
-  tags:
-    - build
-  variables:
-    GIT_STRATEGY: none
-  script:
-    - rm -rf /tmp/ttrss
-  when: always
-cleanup:
-  stage: cleanup
-  tags:
-    - build
-  variables:
-    GIT_STRATEGY: none
-  script:
-    - docker system prune -a -f
-Deploy Containers:
+    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination containers.internal/$CI_PROJECT_NAME:latest
+Deploy Container:
   stage: deploy
   environment: production
   tags:
-    - kubectl
+    - k8s
+  image:
+    name: alpine
+  variables:
+    GIT_STRATEGY: none
   script:
-    - /opt/kubectl/kubectl --kubeconfig=$KUBECONFIG delete pods -l app=ttrss -n $KUBE_NAMESPACE
+    - apk add -U openssl curl
+    - curl -L -o /usr/bin/kubectl "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
+    - chmod +x /usr/bin/kubectl
+    - kubectl version --client
+    - kubectl --kubeconfig=$KUBECONFIG delete pods -l app=ttrss -n $KUBE_NAMESPACE
+
