--- a/ttrss_files/supervisord.conf
+++ b/ttrss_files/supervisord.conf
@@ -1,7 +1,7 @@
 [supervisord]
 nodaemon=true
 
-[program:php5-fpm]
+[program:php-fpm]
 command=/usr/local/sbin/php-fpm --nodaemonize
 
 [program:ttrss-update-daemon]
